Fix potential icon stretching on manage page

--- a/war/src/main/less/modules/section.less
+++ b/war/src/main/less/modules/section.less
@@ -137,7 +137,7 @@
     svg {
       position: relative;
       width: 24px !important;
-      max-height: 48px !important;
+      height: 24px !important;
       color: currentColor;
     }
 
